Added no_click_animation to dialogGeneric

--- a/vois/vuetify/treeviewTest.ipynb
+++ b/vois/vuetify/treeviewTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cacbeccc",
+   "id": "6aeee0b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,10 +13,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3f5d59e9",
+   "execution_count": 2,
+   "id": "f60dfdd9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "945ce541dc8b4bba9fbe6c913ab9ece6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Card(children=[Html(children=[CustomTreeview(activatable=True, color='green', events=['activate', 'change_sele…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# DYNAMIC ADDING OF CHILDREN TO A TREEVIEW\n",
     "%run treeview.py\n",
@@ -52,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d18ff45",
+   "id": "0fba8a96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19318ce6",
+   "id": "1bfb42b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de0d87c5",
+   "id": "b19427a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f83a904",
+   "id": "69677ce0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cbbb793",
+   "id": "40a5043d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f301a092",
+   "id": "41f40330",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a551d01",
+   "id": "ff951188",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43ef99e2",
+   "id": "015713bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6504ce66",
+   "id": "4108d6b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0065eb4",
+   "id": "e9d1191a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9765636",
+   "id": "ec77128f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "201b2823",
+   "id": "3d85012c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33600496",
+   "id": "6d525834",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,17 +201,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83d43d9a",
+   "id": "e9e19f81",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "22218991",
+   "execution_count": 11,
+   "id": "65f8eccb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "35a505b44e7e4943906b92aea2cf6f70",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Card(children=[Html(children=[CustomTreeview(color='green', events=['activate', 'change_selection', 'onopening…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# TREE VIEW CREATED FROM A LIST OF STRINGS\n",
     "%run treeview.py\n",
@@ -209,7 +239,7 @@
     "\n",
     "treecard = createTreeviewFromList(['A','A.1','A.2','A.1.1','A.3.1','A.4.1.2','A.5.2.1','A.4.2.3.1','B','B.A'], separator='.', rootName='Root', expand_selection_to_parents=False, \n",
     "                                  substitutionDict={'A.1': 'A.1 new name'}, color='green', dark=False, width='500px', height='350px', on_change=on_change, on_activated=on_activated,\n",
-    "                                  selectable=True, activatable=False, active='A.2', opened=['Root', 'A', 'A.3'], displayfullname=True, \n",
+    "                                  selectable=True, activatable=False, opened=['Root', 'A', 'A.3'], displayfullname=True, #active='A.2', \n",
     "                                  disabled=['A.1', 'A.3'], tooltips=True, tooltips_chars=0, iconsshow=True, iconscolor='green', open_on_click=True,\n",
     "                                  iconsDict={'A.2': 'mdi-fire', 'A.4.1.2': 'mdi-anchor'}, iconsfolder=True, select_all=False, selected=['A.1.1','A.3.1','A.4.1.2','A.5.2.1'])\n",
     "treecard"
@@ -217,8 +247,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7fca8e3a",
+   "execution_count": 34,
+   "id": "82036440",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3a899e361d824a9099b60d76e9003011",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Card(children=[Html(children=[CustomTreeview(color='green', events=['activate', 'change_selection', 'onopening…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# SIMPLE TREE VIEW CREATED FROM A LIST OF STRINGS\n",
+    "%run treeview.py\n",
+    "\n",
+    "def on_change(arg):\n",
+    "    print(arg)\n",
+    "    \n",
+    "treecard = createTreeviewFromList(['A','A.1','A.2','A.1.1','A.3.1','A.4.1.2','A.5.2.1','A.4.2.3.1','B','B.A'], separator='.', rootName='Root', expand_selection_to_parents=False, \n",
+    "                                  color='green', dark=False, width='500px', height='550px', on_change=on_change, on_activated=on_activated,\n",
+    "                                  selectable=True, activatable=False, opened_all=True, displayfullname=True, \n",
+    "                                  select_all=False, selected=['A.1.1','A.3.1','A.4.1.2','A.5.2.1'])\n",
+    "treecard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "6ef96e15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,8 +292,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "id": "c12c567b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top.treeview.selected = [5,7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "3d1ce20c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A.1.1', 'A.3.1']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top.getSelected()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "9fc642f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top.setSelected(['A.2'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "aebde0db",
+   "id": "fa37f5e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c3080f7",
+   "id": "6e2073be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1644df3f",
+   "id": "1e87fe7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd38462d",
+   "id": "3c282986",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "923f4487",
+   "id": "f82c5791",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2246a496",
+   "id": "c58db4ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f1b247c",
+   "id": "366fca73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f87e8b7",
+   "id": "f7ab9af1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f3e8b2b",
+   "id": "53cda357",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df46049a",
+   "id": "6334f7c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6f48727",
+   "id": "114574ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff78c2fd",
+   "id": "4ac0e30c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba57dcc0",
+   "id": "6d28d608",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e89b6401",
+   "id": "cc5c635f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "055fedfb",
+   "id": "e711f667",
    "metadata": {},
    "outputs": [],
    "source": []
