Added focusedopacity to the card widget

--- a/vois/vuetify/cardTest.ipynb
+++ b/vois/vuetify/cardTest.ipynb
@@ -2,10 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8a444ae9",
+   "execution_count": 12,
+   "id": "d01cb502",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c3184cfaafe442f9a6592ed7edfa5a8c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "card(events=['clicked'], icon='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAQAAAAEACAYAAABccqhmAAAACXBIWXMAA…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "10b5b35589a24b9490ecc214d55b4226",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run card.py\n",
     "\n",
@@ -36,22 +65,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "001db74b",
+   "execution_count": 13,
+   "id": "e77b3c43",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "09620169463d40daa50d71c0030a05c6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "card(elevation=0, events=['clicked'], focusedopacity=0.0, fontsizemultiplier=1.2, iconsize='0px', imagesize='0…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#  Example of responsive card\n",
     "%run card.py\n",
     "\n",
-    "c = card(elevation=5, width='600px', title='Sample dataset', subtitle='', responsive=True, fontsizemultiplier=1.2)\n",
+    "c = card(elevation=0, ripple=False, disabled=False, focusedopacity=0, width='600px', title='Sample dataset', subtitle='', responsive=True, fontsizemultiplier=1.2)\n",
     "c"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f57ac0b",
+   "id": "ad2be01c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e25eeb8b",
+   "id": "95069d58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e700a63",
+   "id": "90c832e3",
    "metadata": {},
    "outputs": [],
    "source": []
