Added z-index to dialogs

--- a/vois/vuetify/dialogWaitTest.ipynb
+++ b/vois/vuetify/dialogWaitTest.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ef3f0972",
+   "execution_count": 1,
+   "id": "cd719368",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "924be865360247dc9d10acb15609bcb6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run dialogWait.py\n",
     "\n",
@@ -20,8 +35,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cf3c76f6",
+   "execution_count": 2,
+   "id": "dab70a62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24774806",
+   "id": "ba0a9683",
    "metadata": {},
    "outputs": [],
    "source": []
