Added reset button to sliderFloat and rangeSliderFloat

--- a/vois/vuetify/layersTest.ipynb
+++ b/vois/vuetify/layersTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8bc065d3",
+   "id": "3cf61517",
    "metadata": {},
    "source": [
     "TODO LIST:\n",
@@ -20,10 +20,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d3f607bc",
+   "execution_count": 4,
+   "id": "2532992d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1561a14f4e0643f688aaadeb20b3983a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(VBox(children=(Output(layout=Layout(height='0px', width='0px')), Html(children=[VBox(children=(…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Management of layers in a ipyleaflet map\n",
     "import ipyleaflet\n",
@@ -51,10 +66,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "851b0349",
+   "execution_count": 5,
+   "id": "1cd09560",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5d77dfc87c76411ba751011a6a69075b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Tabs(background_color='white', children=[TabsSlider(color='#f8bd1a'), Tab(children=['Basemap'],…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Management of Basemap and layers in a ipyleaflet map\n",
     "import ipyleaflet\n",
@@ -114,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "259a08a4",
+   "id": "e05c5959",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -122,191 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da947b9f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4bded9d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "158d6efb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "602c4aed",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc62ab49",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c11bacf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abe72239",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18a79ad6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19b9d16a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f01c29d4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aaa35131",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0a4805b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "949d42a3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fbc6793a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c222c901",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c38e79f4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "382328b0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0e79af80",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8003038c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c2360e5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "72d3cbf7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f083bbb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03be722d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "565f44ec",
+   "id": "457f8f8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ba6a871",
+   "id": "4515309b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b0b4c76",
+   "id": "9a550af1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,20 +182,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fcded48",
+   "id": "911f72bd",
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ca0df79c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!wget http://s-jrciprjeop150p.cidsn.jrc.it:58101/bdap/data/bdap-test-collections-stac-001"
-   ]
   }
  ],
  "metadata": {
