--- a/vois/vuetify/rangeSliderFloatTest.ipynb
+++ b/vois/vuetify/rangeSliderFloatTest.ipynb
@@ -2,10 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4e1a4e7e",
+   "execution_count": 9,
+   "id": "2b6b3ad8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3294ec30d81d413caa4f3de8a8dd18bc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Row(children=[Html(children=['Select Value in [1.0,3.0]:'], class_='pa-0 ma-0 mt-4', style_='', tag='div'), Ht…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bc93526592db47939d4ee3bf13254da1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
@@ -18,7 +47,8 @@
     "    with output:\n",
     "        print(value)\n",
     "\n",
-    "s = rangeSliderFloat(1.8, 2.5, text='Select Value in [1.0,3.0]:', minvalue=1.0, maxvalue=3.0, showpercentage=False, decimals=3, onchange=onchange)\n",
+    "s = rangeSliderFloat(1.8, 2.5, text='Select Value in [1.0,3.0]:', minvalue=1.0, maxvalue=3.0, showpercentage=False, decimals=3,\n",
+    "                     resetbutton=False, showtooltip=True, onchange=onchange)\n",
     "display(s.draw())\n",
     "display(output)"
    ]
@@ -26,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6325618e",
+   "id": "9637c1d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b4c1a12",
+   "id": "391f3f67",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -44,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "970eef12",
+   "id": "b066adad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ddcbe5a",
+   "id": "53e46680",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -75,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "435080fb",
+   "id": "cfca43ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1562c21",
+   "id": "bbb97dee",
    "metadata": {},
    "outputs": [],
    "source": []
