--- a/vois/vuetify/sliderFloatTest.ipynb
+++ b/vois/vuetify/sliderFloatTest.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "0f590092",
+   "execution_count": 2,
+   "id": "dfc0c96c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aef5b1ffdbab41f1a1a906fdb40404a8",
+       "model_id": "97991431ba304b9b84ac3cc714bf0699",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Card(children=[Row(children=[Html(children=['Select Value in [1.0,3.0]:'], class_='pa-0 ma-0 mt-4', style_='wi…"
+       "Row(children=[Html(children=['Select Value in [1.0,3.0]:'], class_='pa-0 ma-0 mt-4', style_='width: 200px; min…"
       ]
      },
      "metadata": {},
@@ -23,7 +23,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "edd57a772d4b494889cc1198bbae3910",
+       "model_id": "847b6814ba8f4d2d857fbf4d45880fd7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -47,7 +47,8 @@
     "    with output:\n",
     "        print(value)\n",
     "\n",
-    "s = sliderFloat(1.8, text='Select Value in [1.0,3.0]:', minvalue=1.0, maxvalue=3.0, showpercentage=False, decimals=2, labelwidth=200, onchange=onchange)\n",
+    "s = sliderFloat(1.8, text='Select Value in [1.0,3.0]:', minvalue=1.0, maxvalue=3.0, showpercentage=False, decimals=2,\n",
+    "                labelwidth=200, resetbutton=True, showtooltip=True, onchange=onchange)\n",
     "display(s.draw())\n",
     "display(output)"
    ]
@@ -55,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b065833",
+   "id": "2b58697a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18a86e6f",
+   "id": "f01ab424",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -73,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ecbdae3",
+   "id": "5134a8d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c8d6f20",
+   "id": "2806e2cd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -104,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42fb8bd0",
+   "id": "d8a26c7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48197e9c",
+   "id": "02866f0c",
    "metadata": {},
    "outputs": [],
    "source": []
