Smaller buttons in float sliders

--- a/vois/vuetify/rangeSliderFloatTest.ipynb
+++ b/vois/vuetify/rangeSliderFloatTest.ipynb
@@ -2,39 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "2b6b3ad8",
+   "execution_count": null,
+   "id": "28a0a230",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3294ec30d81d413caa4f3de8a8dd18bc",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Row(children=[Html(children=['Select Value in [1.0,3.0]:'], class_='pa-0 ma-0 mt-4', style_='', tag='div'), Ht…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc93526592db47939d4ee3bf13254da1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
@@ -48,7 +19,7 @@
     "        print(value)\n",
     "\n",
     "s = rangeSliderFloat(1.8, 2.5, text='Select Value in [1.0,3.0]:', minvalue=1.0, maxvalue=3.0, showpercentage=False, decimals=3,\n",
-    "                     resetbutton=False, showtooltip=True, onchange=onchange)\n",
+    "                     resetbutton=True, showtooltip=True, onchange=onchange)\n",
     "display(s.draw())\n",
     "display(output)"
    ]
@@ -56,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9637c1d1",
+   "id": "73a6d90b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "391f3f67",
+   "id": "603ee74f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -74,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b066adad",
+   "id": "9ac36327",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53e46680",
+   "id": "c1c766ab",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -105,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfca43ef",
+   "id": "7d2c28b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbb97dee",
+   "id": "bd28c9b9",
    "metadata": {},
    "outputs": [],
    "source": []
