Changed Output with Card in sortableList

--- a/vois/vuetify/sortableListTest.ipynb
+++ b/vois/vuetify/sortableListTest.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "64047a55",
+   "execution_count": 2,
+   "id": "4f8bfe65",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b214ded3906c457398df225b4376afb9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Html(children=[VBox(children=(Card(children=[Col(children=[Card(children=[CardTitle(children=[Btn(children=[Ic…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Simple example\n",
     "%run sortableList.py\n",
@@ -39,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "515894bd",
+   "id": "4b81d07a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5fee3a9",
+   "id": "4bcc878f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ebb0321",
+   "id": "44db6878",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6585bebb",
+   "id": "75ce4555",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1de19da",
+   "id": "e09c3583",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bcf13772",
+   "id": "a083e5be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb986305",
+   "id": "5e6ba11b",
    "metadata": {},
    "outputs": [],
    "source": []
