Added tooltips to the tabs widget

--- a/vois/vuetify/tabsTest.ipynb
+++ b/vois/vuetify/tabsTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c588d817",
+   "id": "365aa6a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,7 @@
     "\n",
     "t = tabs(0, ['Label1', 'Label2 is a very long label', 'Label3 is also very long'],\n",
     "         contents=[output0,output1,output2],\n",
+    "         tooltips=['Tooltip for label1'],\n",
     "         onchange=onchange, row=False, dark=False)\n",
     "\n",
     "display(t.draw())"
@@ -32,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "598593df",
+   "id": "830e314e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41eb62b3",
+   "id": "1640b9e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6e73ea9",
+   "id": "cb8dd21c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43459725",
+   "id": "4aabdbd1",
    "metadata": {},
    "outputs": [],
    "source": []
