Added current_layer read-only property to basemaps widget

--- a/vois/vuetify/basemapsTest.ipynb
+++ b/vois/vuetify/basemapsTest.ipynb
@@ -2,25 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "41443027",
+   "execution_count": null,
+   "id": "0cab6236",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e1283a0c233410aba7dec550b34eb38",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Card(children=[Html(children=[CustomTreeview(activatable=True, active=73, color='#f8bd1a', even…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Treeview to select the basemap for a ipyleaflet map instance\n",
     "from jeodpp import inter, imap\n",
@@ -41,7 +26,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d9f421a",
+   "id": "d9c36ddd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(b.current_layer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d8335fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b.current_layer.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7e12a9a",
    "metadata": {},
    "outputs": [],
    "source": []
