Added onchange parameter to basemaps widget

--- a/vois/vuetify/basemapsTest.ipynb
+++ b/vois/vuetify/basemapsTest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cab6236",
+   "id": "bae56a9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9c36ddd",
+   "id": "9bccb0c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d8335fc",
+   "id": "6d46cf4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7e12a9a",
+   "id": "37579129",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b.current_layer.url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe4f6017",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newlayer = ipyleaflet.TileLayer(name='Basemap: ' + b.current_layer.name, visible=True, opacity=0.5, url=b.current_layer.url)\n",
+    "m.add_layer(newlayer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aca1131a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.layers[1].base"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cf9bec4",
    "metadata": {},
    "outputs": [],
    "source": []
